Fixed binding bug, corrected week download interval, adjusted colors in list item layout

--- a/starter/app/src/main/res/layout/list_item_asteroid.xml
+++ b/starter/app/src/main/res/layout/list_item_asteroid.xml
@@ -20,7 +20,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:text="@{asteroid.codename}"
-            android:textColor="?android:attr/colorFocusedHighlight"
+            android:textColor="@color/default_text_color"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -34,7 +34,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="16dp"
             android:text="@{asteroid.closeApproachDate}"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/default_text_color"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/astroid_name_text"
